adds translation strings for "Kingdom" trait.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -417,6 +417,7 @@ card:
     scheme: Komplott
     banner: Banner
     maester: Maester
+    kingdom: Königreich
     kingsguard: Königsgarde
     wildling: Wildling
   reviews:
