--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -416,6 +416,7 @@ card:
     scheme: Conspiración
     banner: Estandarte
     maester: Maestre
+    kingdom: Reino
     kingsguard: Guardia Real
     wildling: Salvaje
   reviews:
