adds lang strings for "Fool" keyword.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -420,6 +420,7 @@ card:
     kingdom: Königreich
     kingsguard: Königsgarde
     wildling: Wildling
+    fool: Narr
   reviews:
     title: Karten-Rezensionen
     none: Noch keine Rezensionen dieser Karte.
