--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -526,6 +526,9 @@ keyword:
   shadow:
     name: Shadow
     title: "A card with shadow (X) can be marshaled facedown into its controller’s shadows area for 2 gold. That card can later be played (if it is an event) or brought into play faceup (if it is a character, location, or attachment) by paying X gold."
+  assault:
+    name: Assault
+    title: "When a player initiates a challenge and 1 or more characters with assault are declared as attackers, that player may choose one location controlled by the defending player with a printed cost lower than the highest printed cost among attacking characters with assault. Treat the chosen location as if its printed text box were blank (except for Traits) until the end of the challenge. If you win this challenge, kneel it."
 tournamentLegality:
   title: Tournament Legality
   joust: Joust
