adds lang strings for edit, siege, and war traits.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -422,6 +422,9 @@ card:
     kingsguard: Königsgarde
     wildling: Wildling
     fool: Narr
+    edict: Erlass
+    siege: Belagerung
+    war: Krieg
   reviews:
     title: Karten-Rezensionen
     none: Noch keine Rezensionen dieser Karte.
