adds new langkeys for menu label.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -152,6 +152,7 @@ decks:
       agotcards: AGoT.cards
       markdown: Markdown
       plaintext: einfacher Text
+      theironthrone: theironthrone.net
     sort:
       by_cardnumber: nach Kartennummer
       by_cost: nach Kosten/Goldwert
