--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -152,6 +152,7 @@ decks:
       agotcards: AGoT.cards
       markdown: Markdown
       plaintext: Plain text
+      theironthrone: theironthrone.net
     sort:
       by_cardnumber: by Card Number
       by_cost: by Cost/Gold
