--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -152,7 +152,7 @@ decks:
       agotcards: AGoT.cards
       markdown: Markdown
       plaintext: einfacher Text
-      theironthrone: theironthrone.net
+      plotsanddrawdeckonly: Nur Strategie- und Ziehkarten
     sort:
       by_cardnumber: nach Kartennummer
       by_cost: nach Kosten/Goldwert
