implements deck validation rules for "Banner of the Falcon" agenda.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -420,6 +420,7 @@ card:
   keywords:
     shadow: Schatten
   traits:
+    housearryn: Haus Arryn
     summer: Sommer
     winter: Winter
     scheme: Komplott
