--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -420,6 +420,7 @@ card:
   keywords:
     shadow: Shadow
   traits:
+    housearryn: House Arryn
     summer: Summer
     winter: Winter
     scheme: Scheme
