--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -419,6 +419,7 @@ card:
   keywords:
     shadow: Sombra
   traits:
+    housearryn: Casa Arryn
     summer: Verano
     winter: Invierno
     scheme: Conspiración
