implements deck validation rules for MoM agendas.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -429,6 +429,7 @@ card:
     maester: Maester
     kingdom: Königreich
     kingsguard: Königsgarde
+    omen: Omen
     wildling: Wildling
     fool: Narr
     edict: Erlass
