--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -428,6 +428,7 @@ card:
     maester: Maestre
     kingdom: Reino
     kingsguard: Guardia Real
+    omen: Augurio
     wildling: Salvaje
     fool: Bufón
     edict: Edicto
