adds lang strings for syntax nav item.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -16,6 +16,7 @@ nav:
   reviews: Rezensionen
   rules: Regeln
   rulesreference: Referenzhandbuch
+  syntax: Syntax
   faq: F.A.Q.
   restrictions: Eingeschränkte und Verbotene Karten
   tournamentregulations: Turnierregeln
