--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -16,6 +16,7 @@ nav:
   reviews: Reviews
   rules: Rules
   rulesreference: Rules Reference
+  syntax: Syntax
   faq: F.A.Q.
   restrictions: Restricted and Banned Cards
   tournamentregulations: Tournament Regulations
