--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -16,6 +16,7 @@ nav:
   reviews: Reseñas
   rules: Reglas
   rulesreference: Guía de referencia
+  syntax: Sintaxis
   faq: F.A.Q.
   restrictions: Cartas restringidas y prohibidas
   tournamentregulations: Normativa para torneos
