adds lang strings for three more traits.

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -436,6 +436,9 @@ card:
     edict: Erlass
     siege: Belagerung
     war: Krieg
+    smallCouncil: "Kleiner Rat"
+    warship: Kriegsschiff
+    weapon: Waffe
   reviews:
     title: Karten-Rezensionen
     none: Noch keine Rezensionen dieser Karte.
