adds deck validation rules for SottC, SofR, and SoKL

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -427,9 +427,11 @@ card:
     winter: Winter
     scheme: Komplott
     banner: Banner
+    guard: Garde
     maester: Maester
     kingdom: Königreich
     kingsguard: Königsgarde
+    kingslanding: Königsmund
     omen: Omen
     wildling: Wildling
     fool: Narr
