--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -426,9 +426,11 @@ card:
     winter: Invierno
     scheme: Conspiración
     banner: Estandarte
+    guard: Guardia
     maester: Maestre
     kingdom: Reino
     kingsguard: Guardia Real
+    kingslanding: Desembarco del Rey
     omen: Augurio
     wildling: Salvaje
     fool: Bufón
