--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -18,6 +18,7 @@ nav:
   rulesreference: Referenzhandbuch
   syntax: Syntax
   faq: F.A.Q.
+  draft: Draft F.A.Q.
   restrictions: Eingeschränkte und Verbotene Karten
   tournamentregulations: Turnierregeln
   advancedsearch: Erweiterte Suche
