--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -18,6 +18,7 @@ nav:
   rulesreference: Rules Reference
   syntax: Syntax
   faq: F.A.Q.
+  draft: Draft F.A.Q.
   restrictions: Restricted and Banned Cards
   tournamentregulations: Tournament Regulations
   advancedsearch: Advanced Search
