--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -18,6 +18,7 @@ nav:
   rulesreference: Guía de referencia
   syntax: Sintaxis
   faq: F.A.Q.
+  draft: Draft F.A.Q.
   restrictions: Cartas restringidas y prohibidas
   tournamentregulations: Normativa para torneos
   advancedsearch: Búsqueda avanzada
