--- a/translations/messages.es.yml
+++ b/translations/messages.es.yml
@@ -79,6 +79,9 @@ decks:
       agenda: "Nuevo mazo: %faction%, %agenda%"
     errors:
       nofaction: Se requiere una Facción.
+    mode:
+      constructed: Constructed
+      variant: Variant
   edit:
     unsaved: Este mazo tiene cambios sin guardar. Por favor, guarda el mazo o cancela los cambios antes de seguir modificándolo.
     refresh: Recargar los datos de la aplicación
